<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeOrderActivity">

    <TextView
        android:id="@+id/tvGreetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/greetings"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroupDrinks"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupDrinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tvAdditives"
        app:layout_constraintTop_toBottomOf="@+id/tvGreetings">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/tea"
            android:textColor="@color/purple_500" />

        <RadioButton
            android:id="@+id/radioButtonCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/coffee"
            android:textColor="@color/purple_500" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvAdditives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/additives"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxMilk"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupDrinks" />

    <CheckBox
        android:id="@+id/checkBoxSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"

        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxMilk"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxMilk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBoxMilk" />

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"

        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@+id/tvDrinkType"
        app:layout_constraintEnd_toStartOf="@id/checkBoxLemon"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/checkBoxSugar"
        app:layout_constraintTop_toBottomOf="@+id/tvAdditives" />

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxMilk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/checkBoxMilk"
        app:layout_constraintTop_toTopOf="@+id/checkBoxMilk" />

    <TextView
        android:id="@+id/tvDrinkType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/chosse_drink_type"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTea"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxMilk" />

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/types_of_tea"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonMakeOrder"
        app:layout_constraintTop_toBottomOf="@+id/tvDrinkType" />
    />

    <Spinner
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/types_of_coffee"
        tools:visibility="visible"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonMakeOrder"
        app:layout_constraintTop_toBottomOf="@+id/tvDrinkType" />
    />

    <Button
        android:id="@+id/buttonMakeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/buy_order"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTea" />

</androidx.constraintlayout.widget.ConstraintLayout>